Closed Bug 1703171 Opened 3 years ago Closed 3 years ago

accesskey inside shadow DOM not exposed to a11y

Categories

(Core :: Disability Access APIs, defect, P1)

defect

Tracking

()

RESOLVED FIXED
89 Branch
Tracking Status
firefox89 --- fixed

People

(Reporter: Jamie, Assigned: Jamie)

References

Details

Attachments

(1 file)

STR:

  1. Open this URL:
    data:text/html,
    <div id="host"></div>
    <script>
    const shadow = host.attachShadow({mode: "open"});
    shadow.innerHTML = '<button accesskey="t">Test</button>';
    </script>
    
  2. Right click the button and choose "Inspect Accessibility Properties".
  3. Check the keyboardShortcut property.
    • Expected: "alt+shift+t"
    • Actual: ""

This causes problems for the new browser info bars (pref: browser.proton.infobars.enabled) because the notification buttons are inside shadow DOM.

Previously, when determining the modifier, the code used the uncomposed document, which will be null for an element inside shadow DOM.

Pushed by jteh@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/d2f40c7c26cd
Support a11y exposure of accessKey for elements in shadow DOM. r=morgan
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: