Bug 1703171: Support a11y exposure of accessKey for elements in shadow DOM. r=morgan

Previously, when determining the modifier, the code used the uncomposed document, which will be null for an element inside shadow DOM.

Differential Revision: https://phabricator.services.mozilla.com/D111033